# blog

./: pyproject.toml
blog/: README.md  pyproject.toml  settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
users/: authentication.py  helper.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_userinfo_phone.py  0003_userinfo_phone.py  0004_alter_userinfo_password.py
