[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Praseesh <praseeshprasee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
psycopg = "^3.2.1"
psycopg2 = "^2.9.9"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
